load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["objectstorage.go"],
    importpath = "k8s.io/test-infra/testgrid/util/objectstorage",
    visibility = [
        "//prow/gcsupload:__subpackages__",
        "//prow/osupload:__subpackages__",
        "//prow/spyglass:__subpackages__",
        "//testgrid:__subpackages__",
    ],
    deps = ["//vendor/github.com/google/go-cloud/blob:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["objectstorage_test.go"],
    embed = [":go_default_library"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
